chore: move google region

--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -10,7 +10,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   SERVICE_NAME: adventgames
-  REGION: us-central1
+  REGION: europe-west1
   IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/adventgames
 
 jobs:
@@ -57,7 +57,7 @@ jobs:
             --memory 512Mi \
             --cpu 1 \
             --min-instances 0 \
-            --max-instances 10 \
+            --max-instances 2 \
             --timeout 300 \
             --port 3000 \
             --set-env-vars NODE_ENV=production \
