Switch from Container Registry to Artifact Registry
- Updated workflow to use Artifact Registry instead of GCR
- Added automatic repository creation step
- Updated deployment guide with correct permissions
- Changed Storage Admin to Artifact Registry Writer role

--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -11,7 +11,9 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   SERVICE_NAME: adventgames
   REGION: europe-west1
-  IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/adventgames
+  # Use Artifact Registry instead of Container Registry
+  ARTIFACT_REGISTRY: europe-west1-docker.pkg.dev
+  IMAGE_NAME: ${{ env.ARTIFACT_REGISTRY }}/${{ secrets.GCP_PROJECT_ID }}/adventgames/adventgames
 
 jobs:
   deploy:
@@ -34,15 +36,23 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Configure Docker for GCR
+      - name: Create Artifact Registry repository (if not exists)
         run: |
-          gcloud auth configure-docker --quiet
+          gcloud artifacts repositories create adventgames \
+            --repository-format=docker \
+            --location=${{ env.REGION }} \
+            --description="Docker repository for Advent Games" \
+            --quiet || echo "Repository already exists"
+
+      - name: Configure Docker for Artifact Registry
+        run: |
+          gcloud auth configure-docker ${{ env.ARTIFACT_REGISTRY }} --quiet
 
       - name: Build Docker image
         run: |
           docker build -t $IMAGE_NAME:$GITHUB_SHA -t $IMAGE_NAME:latest .
 
-      - name: Push Docker image to GCR
+      - name: Push Docker image to Artifact Registry
         run: |
           docker push $IMAGE_NAME:$GITHUB_SHA
           docker push $IMAGE_NAME:latest
