--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -11,9 +11,9 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   SERVICE_NAME: adventgames
   REGION: europe-west1
-  # Use Artifact Registry instead of Container Registry
+  # Use Artifact Registry - registry name from secret
   ARTIFACT_REGISTRY: europe-west1-docker.pkg.dev
-  IMAGE_NAME: ${{ env.ARTIFACT_REGISTRY }}/${{ secrets.GCP_PROJECT_ID }}/adventgames/adventgames
+  IMAGE_NAME: ${{ env.ARTIFACT_REGISTRY }}/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_ARTIFACT_REGISTRY }}/adventgames
 
 jobs:
   deploy:
@@ -35,14 +35,6 @@ jobs:
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
-
-      - name: Create Artifact Registry repository (if not exists)
-        run: |
-          gcloud artifacts repositories create adventgames \
-            --repository-format=docker \
-            --location=${{ env.REGION }} \
-            --description="Docker repository for Advent Games" \
-            --quiet || echo "Repository already exists"
 
       - name: Configure Docker for Artifact Registry
         run: |
