--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -60,8 +60,7 @@ jobs:
             --max-instances 2 \
             --timeout 300 \
             --port 3000 \
-            --set-env-vars NODE_ENV=production \
-            --set-env-vars PORT=3000
+            --set-env-vars NODE_ENV=production
 
       - name: Get service URL
         run: |
