--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "body-parser": "^1.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "@google-cloud/storage": "^7.7.0",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
